# neuroflow-core

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  fix_token.py  osw_engine.py  pyproject.toml  runner.py  telegram_ingestor.py  telegram_segmentation.py
.github/workflows/: ci.yml
docs/: architecture-diagram.html  codebase-inspection.md  implementation-plan.md
neuroflow_core/: __init__.py  __main__.py  osw_engine.py  telegram_ingestor.py  telegram_segmentation.py
scripts/: run-ingestor.sh
tests/: __init__.py  conftest.py  test_integration.py  test_osw_engine.py  test_telegram_ingestor.py  test_telegram_segmentation.py
