[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroflow-core"
version = "0.1.0"
description = "Telegram user segmentation with state machines — track, classify, and convert users through custom pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "remontsuri", email = "remontsuri@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
neuroflow = "neuroflow_core.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["neuroflow_core*"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
